--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -5,6 +5,17 @@
   height: 350px;
   align-items: center;
   position: relative;
+  @media screen and (max-width: 800px) {
+    width: 40vw;
+    &:hover {
+      .image {
+        opacity: unset;
+      }
+      button {
+        opacity: unset;
+      }
+    }
+  }
 
   .image {
     width: 100%;
@@ -31,6 +42,24 @@
       opacity: 0.85;
       display: flex;
     }
+    @media screen and (max-width: 800px) {
+     width: 40vw;
+      .custom-button{
+       display: block;
+       min-width: unset;
+       padding: 0 10px;
+       opacity: 0.9;
+     }
+     &:hover{
+       .image{
+         opacity: unset;
+       }
+     }
+     .custom-button{
+       opacity: unset;
+     }
+    }
+
   }
 
   .collection-footer {
