--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -33,6 +33,7 @@
   &:last-child {
     margin-left: 7.5px;
   }
+ 
 
   .background-image {
     width: 100%;
@@ -64,5 +65,14 @@
       font-weight: lighter;
       font-size: 16px;
     }
+    @media screen and (max-width: 800px) {
+      min-width: 80px;
+     
+    }
+  }
+
+  @media screen and (max-width: 800px) {
+    height: 200px;
+   
   }
 }
